--- a/tgui/packages/tgui/styles/themes/clockcult.scss
+++ b/tgui/packages/tgui/styles/themes/clockcult.scss
@@ -7,7 +7,7 @@
   $bg-map-keys: (),
 );
 @use '../base.scss' with (
-  $color-bg: #CFBA47,
+  $color-bg: #c9b12a,
   $color-bg-grad-spread: 6%,
   $border-radius: 2px,
 );
@@ -18,7 +18,6 @@
 
   // Components
   @include meta.load-css('../components/Button.scss', $with: (
-    'color-backround' : #170800,
     'color-default': colors.$primary,
     'color-disabled': #2D1400,
     'color-selected': #CFBA47,
@@ -29,7 +28,7 @@
     'border-color': #8faa2e,
   ));
   @include meta.load-css('../components/NoticeBox.scss', $with: (
-    'color-background': #170800,
+    'color-background': #886a09,
   ));
   @include meta.load-css('../components/NumberInput.scss', $with: (
     'border-color': #87ce87,
@@ -40,14 +39,13 @@
   @include meta.load-css('../components/Section.scss');
   @include meta.load-css('../components/Tooltip.scss', $with: (
     'color-background': #2D1400,
-    'border-color': #170800,
   ));
 
   // Layouts
   @include meta.load-css('../layouts/Layout.scss');
   @include meta.load-css('../layouts/Window.scss');
   @include meta.load-css('../layouts/TitleBar.scss', $with: (
-    'color-background': #910101,
+    'color-background': #775b0f,
   ));
 
   .Layout__content {
