things and things. paperwork gone??

--- a/tgui/packages/tgui/styles/components/Flex.scss
+++ b/tgui/packages/tgui/styles/components/Flex.scss
@@ -1,3 +1,8 @@
+/**
+ * Copyright (c) 2020 Aleksej Komarov
+ * SPDX-License-Identifier: MIT
+ */
+
 .Flex {
   display: -ms-flexbox;
   display: flex;
@@ -9,6 +14,16 @@
 
 .Flex--ie8 {
   display: table !important;
+}
+
+.Flex--ie8--column {
+  display: block !important;
+
+  & > .Flex__item {
+    display: block !important;
+    margin-left: 6px;
+    margin-right: 6px;
+  }
 }
 
 .Flex__item--ie8 {
